# Tiket

./: .gitignore  .vercelignore  README.md  biome.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: page.tsx
app/events/: page.tsx
app/stats/: page.tsx
app/tickets/: page.tsx
components/: connect-button.tsx  network-badge.tsx  purchase-dialog.tsx  site-footer.tsx  site-header.tsx  wallet-provider.tsx
components/ui/: button.tsx  status-badge.tsx
contracts/: .gitignore  Cargo.toml  DEPLOYMENT.md  Makefile  rust-toolchain.toml  tiket_ticketing.optimized.wasm
contracts/scripts/: deploy.sh
contracts/tiket-ticketing/: Cargo.toml
contracts/tiket-ticketing/src/: error.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/tiket-ticketing/test_snapshots/test/: test_buy_escrows_funds.1.json  test_buy_sold_out.1.json  test_cancel_event_blocks_sales.1.json  test_check_in_settles_to_organizer.1.json  test_check_in_twice_fails.1.json  test_check_in_unknown_ticket_fails.1.json  test_create_event.1.json  test_create_event_invalid_params.1.json  test_free_event_buy_and_checkin.1.json  test_initialize.1.json  test_refund_after_start_fails.1.json  test_refund_before_start_returns_funds.1.json
drizzle/: 0000_dark_strong_guy.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
lib/: api.ts  format.ts  stellar-client.ts
scripts/: delete-tiket-1.ts  seed-stellar-hackathon.ts  update-stellar-hackathon-onchain.ts
tests/: setup.ts
tests/e2e/: prod-real.spec.ts
tests/unit/: format.test.ts  (+1 more)
(+34 files in other folders)
